[package]
name = "ssd1681"
version = "0.2.0"
authors = ["Paul Diaconescu <p@afajl.com>", "Chris Nguyen <clinery8237@gmail.com>"]
description = "Driver for the SSD1681 e-Paper display (EPD) controller, for use with embedded-hal"
edition = "2018"

repository = "https://github.com/Clinery1/ssd1681"

readme = "README.md"
keywords = ["embedded-hal-driver", "epd", "epaper", "driver", "ssd1681"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-graphics-core = "0.3.3"

[dependencies.bitvec]
version="1"
default-features=false

[dev-dependencies]
[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.3.0"

[profile.release]
lto = true
