[package]
name = "epd_driver"
version = "0.3.1"
authors = ["Paul Diaconescu <p@afajl.com>", "Chris Nguyen <clinery8237@gmail.com>"]
description = "Driver for the SSD1681 e-Paper display (EPD) controller, for use with embedded-hal"
edition = "2018"

repository = "https://github.com/Clinery1/ssd1681"

readme = "README.md"
keywords = ["embedded-hal-driver", "epd", "epaper", "driver", "ssd1681"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[features]
default=["alloc"]
alloc=[]

[dependencies]
embedded-hal = "1.0.0-alpha.7"
embedded-graphics-core = "0.3.3"

[profile.release]
lto = true
